Document NixOS ATM10 server sprint